# regxmllib

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.txt  CTestConfig.cmake  LICENSE.txt  README.cmake.txt  README.txt  build.xml  log4j.properties  pom.xml
regxmllib/: .gitignore  CMakeLists.txt  build.properties  build.xml  pom.xml  regxmllibcConfig.cmake.in
regxmllib/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
regxmllib/src/com/sandflow/smpte/klv/: Group.java  KLVInputStream.java  LocalSet.java  LocalSetRegister.java  LocalTagRegister.java  MemoryTriplet.java  Triplet.java  package-info.java
regxmllib/src/com/sandflow/smpte/klv/adapter/: TripletValueAdapter.java  ULValueAdapter.java
regxmllib/src/com/sandflow/smpte/klv/adapters/: TripletValueAdapter.java  ULValueAdapter.java
regxmllib/src/com/sandflow/smpte/klv/exception/: KLVException.java  TripletLengthException.java
regxmllib/src/com/sandflow/smpte/klv/exceptions/: KLVException.java  TripletLengthException.java
regxmllib/src/com/sandflow/smpte/mxf/: FillItem.java  MXFInputStream.java  PartitionPack.java  PrimerPack.java  Set.java  package-info.java
regxmllib/src/com/sandflow/smpte/register/: ElementEntry.java  ElementsRegister.java  GroupEntry.java  GroupsRegister.java  LabelEntry.java  LabelsRegister.java  QualifiedSymbol.java  TypeEntry.java  TypesRegister.java  package-info.java
regxmllib/src/com/sandflow/smpte/register/exception/: DuplicateEntryException.java  InvalidEntryException.java
regxmllib/src/com/sandflow/smpte/register/importer/: ExcelElementsRegister.java  ExcelGroupsRegister.java  ExcelLabelsRegister.java  ExcelTypesRegister.java
regxmllib/src/com/sandflow/smpte/regxml/: FragmentBuilder.java  NamespacePrefixMapper.java  NullDefinitionVisitor.java  XMLSchemaBuilder.java
regxmllib/src/com/sandflow/smpte/regxml/definition/: CharacterTypeDefinition.java  ClassDefinition.java  Definition.java  DefinitionVisitor.java  EnumerationTypeDefinition.java  ExtendibleEnumerationTypeDefinition.java  FixedArrayTypeDefinition.java  FloatTypeDefinition.java  IndirectTypeDefinition.java  IntegerTypeDefinition.java  LensSerialFloatTypeDefinition.java  OpaqueTypeDefinition.java  PropertyAliasDefinition.java  PropertyDefinition.java  RecordTypeDefinition.java  RenameTypeDefinition.java  SetTypeDefinition.java  StreamTypeDefinition.java  StringTypeDefinition.java  StrongReferenceTypeDefinition.java  VariableArrayTypeDefinition.java  WeakReferenceTypeDefinition.java  package-info.java
regxmllib/src/com/sandflow/smpte/regxml/dict/: DefinitionResolver.java  DuplicateDefinitionException.java  DuplicateSymbolException.java  IllegalDictionaryException.java  MetaDictionary.java  MetaDictionaryCollection.java  MetaDictionaryGroup.java  NullDefinitionVisitor.java  package-info.java
regxmllib/src/com/sandflow/smpte/regxml/dict/definitions/: CharacterTypeDefinition.java  ClassDefinition.java  Definition.java  DefinitionVisitor.java  EnumerationTypeDefinition.java  ExtendibleEnumerationTypeDefinition.java  FixedArrayTypeDefinition.java  FloatTypeDefinition.java  IndirectTypeDefinition.java  IntegerTypeDefinition.java  LensSerialFloatTypeDefinition.java  NullDefinitionVisitor.java  OpaqueTypeDefinition.java  PropertyAliasDefinition.java  PropertyDefinition.java  RecordTypeDefinition.java  (+8 more)
regxmllib/src/com/sandflow/smpte/tools/: ApplyXSL.java  BuildVersionSingleton.java  GenerateDictionaryXMLSchema.java  GenerateXMLSchemaDocuments.java  RegXMLDump.java  XLSRegistersToXML.java  XMLRegistersToDict.java
regxmllib/src/com/sandflow/smpte/util/: AUID.java  CountingInputStream.java  ExcelCSVParser.java  UL.java  UMID.java  UUID.java
regxmllib/src/com/sandflow/smpte/util/xml/: AUIDAdapter.java  ULAdapter.java  UUIDAdapter.java  package-info.java
regxmllib/src/main/config/: .gitignore
regxmllib/src/main/cpp/com/sandflow/util/: CountingStreamBuf.h  DOMHelper.cpp  DOMHelper.h  membuf.h  optional.h  scoped_ptr.h  strformat.cpp  strformat.h
regxmllib/src/main/java/com/sandflow/util/: EventHandler.java
regxmllib/src/test/resources/reference-files/: audio1.xml  audio2.xml  class14.xml  escape-chars.xml  indirect.xml  utf8_embedded_text.xml  video1.xml  video2.xml
regxmllib/src/test/resources/reference-registers/: Elements.xml  Groups.xml  Labels.xml  Types.xml
regxmllib/src/test/resources/registers/2016/: groups.xml
regxmllib/src/test/resources/registers/brown_sauce/: Groups.xml  Labels.xml  Types.xml
regxmllib/src/test/resources/registers/snapshot/: Groups.xml
regxmllib/src/test/resources/regxml-dicts/: www-ebu-ch-metadata-schemas-ebucore-smpte-class13-element.xml  www-ebu-ch-metadata-schemas-ebucore-smpte-class13-group.xml  www-ebu-ch-metadata-schemas-ebucore-smpte-class13-type.xml  www-smpte-ra-org-reg-2003-2012-13-1-amwa-as11.xml  www-smpte-ra-org-reg-2003-2012-13-1-amwa-as12.xml  www-smpte-ra-org-reg-2003-2012-13-12-as11.xml  www-smpte-ra-org-reg-2003-2012-13-4-archive.xml  www-smpte-ra-org-reg-2003-2012.xml  www-smpte-ra-org-reg-335-2012-13-1-aaf.xml  www-smpte-ra-org-reg-335-2012-13-1-amwa-as10.xml  www-smpte-ra-org-reg-335-2012-13-1-amwa-as11.xml  www-smpte-ra-org-reg-335-2012-13-1-amwa-as12.xml  www-smpte-ra-org-reg-335-2012-13-1-amwa-rules.xml  www-smpte-ra-org-reg-335-2012-13-12-as11.xml  www-smpte-ra-org-reg-335-2012-13-13.xml  www-smpte-ra-org-reg-335-2012-13-4-archive.xml  www-smpte-ra-org-reg-335-2012.xml  www-smpte-ra-org-reg-395-2014-13-1-aaf.xml  www-smpte-ra-org-reg-395-2014-13-1-amwa-as-common.xml  www-smpte-ra-org-reg-395-2014-13-1-amwa-as10.xml  www-smpte-ra-org-reg-395-2014-13-1-amwa-as11.xml  www-smpte-ra-org-reg-395-2014-13-1-amwa-as12.xml  www-smpte-ra-org-reg-395-2014-13-12-as11.xml  www-smpte-ra-org-reg-395-2014-13-13.xml  www-smpte-ra-org-reg-395-2014-13-4-archive.xml  www-smpte-ra-org-reg-395-2014-14-9.xml  www-smpte-ra-org-reg-395-2014.xml
regxmllib/src/test/resources/sample-files/: audio1.mxf  audio2.mxf  escape-chars.mxf  indirect.mxf  open-incomplete-header.mxf  utf8_embedded_text.mxf  video1.mxf  video2.mxf
regxmllib/xsd/: reg.xsd
(+370 files in other folders)
